fix(4-week): добавил поле password в запрос для создания пользователя
