# 4-week/internal/adapters/transport/http/v1/user/dto/converter.go
@@ -10,6 +10,7 @@ func ToCreateInput(req CreateUserRequest) serviceuser.CreateInput {
 		FirstName: req.FirstName,
 		LastName:  req.LastName,
 		Email:     req.Email,
+		Password:  req.Password,
 	}
 }
 
