# 4-week/internal/adapters/transport/http/v1/user/dto/request.go
@@ -4,6 +4,7 @@ type CreateUserRequest struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
+	Password  string `json:"password"`
 }
 
 type UpdateUserRequest struct {
